package src;

public class Main {

    static Menu menu = new Menu();


    public static void main(String[] args) {
        menu.startMenu();



    }
}
