package src;

public class Series {

    public int numberOfEpisodes()
    {
        return 0;
    }

    public int numberOfSeasons()
    {
        return 0;
    }
}
